# 300-A2

./: CMakeLists.txt  global_var.c  global_var.h  input.c  input.h  main.c  main.h  makefile  output.c  output.h  receive.c  receive.h  s-talk  send.c  send.h  sendDEBUG  soc  soc.c  soc.h
io/: input.c  input.h  output.c  output.h
networking/: makefile  receive.c  receive.h  send.c  send.h  soc.c  soc.h
networking/soc.dSYM/Contents/: Info.plist
networking/soc.dSYM/Contents/Resources/DWARF/: soc
